src/components/Events/Events.css
.events {
  background-color: #000015;
  min-height: 100vh;
  padding: 30px 0px 100px;
  position: relative;
}

.events-img1, .events-img2, .events-img3{
  position: absolute;
}

.events-img1{
  top: 0;
  left: -5rem;
  width: 15rem;
  transform: rotate(120deg);
}
.events-img2{
  bottom: 0rem;
  right: 0rem;
  width: 10rem;
}
.events-img3{
  top: 5rem;
  right: 10rem;
  width: 5rem;
}

.event-heading {
  text-align: center;
  color: white;
  margin: 40px;
  font-size: 40px;
  letter-spacing: 6px;
  position: relative;
  z-index: 5;
}

.events-img {
  width: 320px;
  height: 500px;
  border-radius: 1rem;
}

@media screen and (max-width: 40rem){
  .events-img1{
    top: 0;
    left: 0rem;
    width: 5rem;
    transform: rotate(120deg);
  }
  .events-img2{
    bottom: 0rem;
    right: -1rem;
    width: 5rem;
  }
  .events-img3{
    top: 3rem;
    right: -3rem;
    width: 8rem;
    transform: rotate(45deg);
  }
}

